--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
-  <head></head>
+  <head>
+    <script src="js/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+  </head>
   <body>
     <h1>Fiddle</h1>
     <p>Scroll down to channel your fiddling needs.</p>
+    <h2>Clicker</h2>
+    <button type="button" id="clicker" onClick="onClick()">Click me</button>
+    <p>Clicks: <a id="clicks">0</a></p>
   </body>
 </html>
