--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <h1>Fiddle</h1>
-    <p>Scroll down to channel your fiddling needs.</p>
+    <div id="hero"> 
+      <h1>Fiddle</h1>
+      <p>Scroll down to channel your fiddling needs.</p>
+    </div>
     <h2>Clicker</h2>
     <button type="button" id="clicker" onClick="onClick()">Click me</button>
     <p>Clicks: <a id="clicks">0</a></p>
