--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
       <h1>Fiddle</h1>
       <p>Scroll down to channel your fiddling needs.</p>
     </div>
-    <h2>Clicker</h2>
-    <button type="button" id="clicker" onClick="onClick()">Click me</button>
-    <p>Clicks: <a id="clicks">0</a></p>
+    <div id="clicker">
+      <h2>Clicker</h2>
+      <button type="button" id="clicker" onClick="onClick()">Click me</button>
+      <p>Clicks: <a id="clicks">0</a></p>
+    </div>
   </body>
 </html>
