--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </div>
     <div id="clickDiv">
       <h2>Clicker</h2>
-      <button type="button" id="clicker" onClick="onClick()">Click me</button>
+      <button type="button" id="clicker" onClick="onClick()"></button>
       <p>Clicks: <a id="clicks">0</a></p>
     </div>
   </body>
