--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
       <button type="button" id="clicker" onClick="onClick()"></button>
       <p>Clicks: <a id="clicks">0</a></p>
     </div>
+    <div class="center">
+      <div class="range-slider" id="range-slider-1">
+        <span></span>
+      </div>
+    </div>
   </body>
 </html>
