--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <p>Clicks: <a id="clicks">0</a></p>
     </div>
     <div class="center">
+      <h2>Slider</h2>
       <div class="range-slider" id="range-slider-1">
         <span></span>
       </div>
