--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="js/main.js"></script>
+<!--     <script src="js/main.js"></script> -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
@@ -19,5 +19,6 @@
         <span></span>
       </div>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
